# zero-to-main

./: .gitignore  CMakeLists.txt  commands.txt  minimal.ld
cmake/: arm-none-eabi-lto.cmake  arm-none-eabi.cmake  binutils-arm-none-eabi.cmake  gdb-helper.cmake  openocd-run.gdb.in  stlink-run.gdb.in  stm32g03x.cmake  toolchain-arm-none-eabi.cmake
include/: hal.h
src/: hal.c  minimal.c  startup_stm32g03x.c
